--- a/app/global.css
+++ b/app/global.css
@@ -1,4 +1,8 @@
-@import 'tailwindcss';
+@import "tailwindcss";
+
+body {
+  font-family: var(--font-nunito), ui-sans-serif, system-ui, sans-serif;
+}
 
 ::selection {
   background-color: #47a3f3;
@@ -53,7 +57,7 @@ html {
 
 .prose .anchor:after {
   @apply text-neutral-300 dark:text-neutral-700;
-  content: '#';
+  content: "#";
 }
 
 .prose *:hover > .anchor {
@@ -131,8 +135,8 @@ pre {
 }
 
 /* Remove Safari input shadow on mobile */
-input[type='text'],
-input[type='email'] {
+input[type="text"],
+input[type="email"] {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
